Fix text color on table hover in dark mode

--- a/wordpress/wp-content/themes/knock-knock/assets/scss/_table.scss
+++ b/wordpress/wp-content/themes/knock-knock/assets/scss/_table.scss
@@ -12,10 +12,8 @@
 }
 
 .table-hover {
-  tbody {
-    tr:hover {
-      color: var(--body-color-darker);
-    }
+  tr:hover td {
+    color: var(--body-color-darker);
   }
 }
 
